# IMDBDataVisualization

./: pyproject.toml  test.ipynb
app/: app.py  data_preprocessing.py  main.py  run.py
