[tool.poetry]
name = "imdb_data_visualization"
version = "0.1.0"
description = ""
authors = ["Ayxan <ayxan.shahsuvarov1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
plotly = "^5.8.0"
streamlit = "^1.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
