[tool.poetry]
name = "imdbdatavisualization"
version = "0.1.0"
description = ""
authors = ["ayxan <ayxan.shahsuvarov1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
plotly = "^5.9.0"
streamlit = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
